--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="text-gray-900 leading-tight">
+<html lang="en" class="text-gray-900 leading-6">
 
 <head>
   <title>{{ .Site.Title }}</title>
