--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,15 +12,17 @@
   {{ $css := $css | resources.Fingerprint }}
   <link rel="stylesheet" href="{{ $css.RelPermalink }}" media="all">
 
-  <script src="//unpkg.com/alpinejs" defer></script>
+  <script defer src="//unpkg.com/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
+  <script defer src="//unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
 
   {{ "<!-- Components -->" | safeHTML }}
   {{ $components := slice }}
-  {{ range (resources.Match "components/**.js") }}
+  {{ range resources.Match "components/*/element.js" }}
     {{ $c := . | resources.ExecuteAsTemplate "temp.js" . }}
     {{ $components = $components | append $c }}
   {{ end }}
-  {{ $script := $components | resources.Concat "components.js"}}
+  {{ $script := $components | resources.Concat "components.js" | minify }}
   <script src="{{- $script.RelPermalink -}}"></script>
 
 </head>
