--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,4 +9,30 @@
 
 <p>my-alpine-counter:</p>
 <my-alpine-counter></my-alpine-counter>
+
+<p class="h-64">Demo Spacer</p>
+
+<div x-data="{ shown: false }" x-intersect="shown = true">
+  <div x-show="shown" x-transition>
+      I'm in the viewport!
+  </div>
+</div>
+
+<div>
+  <div class="transition transform duration-500 opacity-0 translate-x-32" x-intersect="$el.classList.add('opacity-100')"
+  x-intersect:leave="$el.classList.add('translate-x-32 opacity-0')">
+    <p class="font-semibold bg-rose-400 p-5 mb-10 text-white">Tailwind is the best for optimisation!</p>
+  </div>
+
+  <div x-data="{ open: false }" x-intersect:enter="open=true" x-intersect:leave="open=false">
+    <button @click="open = ! open">Toggle</button>
+
+    <div x-show="open" x-transition:enter="transition ease-out duration-300"
+      x-transition:enter-start="opacity-0 transform scale-90" x-transition:enter-end="opacity-100 transform scale-100"
+      x-transition:leave="transition ease-in duration-300" x-transition:leave-start="opacity-100 transform scale-100"
+      x-transition:leave-end="opacity-0 transform scale-90">Hello 👋</div>
+  </div>
+</div>
+
+
 {{ end }}
