--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,7 +28,8 @@
 </head>
 
 <body class="min-h-screen max-w-7xl mx-auto sm:px-6 lg:px-8 bg-gray-200 prose">
-  {{ block "main" .}}{{end}}
+  {{ block "main" .}}
+  {{end}}
 </body>
 
 </html>
